Site skeleton update before splitting the project between team members

--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
 </head>
 
 <body>
-<nav>
 
-</nav>
-<div></div>
+    <div class="mainPage">
+        <div class="homeFlexContainer">
+            <nav>
+            </nav>
+        </div>
+    </div>
+
+    <div class="quizPage">
+        <div class="quizFlexContainer">
+
+        </div>
+    </div>
+
+    <div class="resultsPage">
+        <div class="resultsFlexContainer">
+
+        </div>
+    </div>
+
 <script src="script.js"></script>
 </body>
 </html>
