first step on rankpage and footer CSS

--- a/index.html
+++ b/index.html
@@ -28,47 +28,54 @@
     <div class="resultsPage">
       <h1>You finished the Quizz</h1>
       <p>Congrats userName, you scored userScore !</p>
-      <p>You ranked userRank</p>
+      <p>You ranked userRank.</p>
       <div class="resultsFlexContainer">
         <article class="firstUser">
           <img
             class="avatar"
-            src="http://placekitten.com/100/100"
+            src="https://picsum.photos/100/100"
             alt="avatar de firstUser"
           />
+        <div>
           <p>firstUserName</p>
           <p>firstUserScore</p>
+        </div>
         </article>
 
         <article class="secondUser">
           <img
             class="avatar"
-            src="http://placekitten.com/100/100"
+            src="https://picsum.photos/100/100"
             alt="avatar de secondUser"
           />
-          <p>secondtUserName</p>
+          <div>
+          <p>secondUserName</p>
           <p>secondUserScore</p>
+        </div>
         </article>
 
         <article class="thirdtUser">
           <img
             class="avatar"
-            src="http://placekitten.com/100/100"
+            src="https://picsum.photos/100/100"
             alt="avatar de thirdUser"
           />
+        <div>
           <p>thirdtUserName</p>
           <p>thirdUserScore</p>
+        </div>
         </article>
       </div>
 
-      <input class="secondary-button"
-       type="button"
-       value="Try another quiz !">
-
+      <input
+        class="primary-button"
+        type="button"
+        value="Try another quiz !"
+      />
     </div>
 
     <footer>
-        <p>© 2022 Team Triangle </p>
+      <p>© 2022 Team Triangle</p>
     </footer>
 
     <script src="script.js"></script>
