ajout responsive podium

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="resultsPage">
-      <h1>You finished the Quizz</h1>
-      <p>Congrats userName, you scored userScore !</p>
+      <h1>You finished the Quizz !</h1>
+      <p>Congrats userName, you scored userScore.</p>
       <p>You ranked userRank.</p>
       <div class="resultsFlexContainer">
         <article class="firstUser">
@@ -54,7 +54,7 @@
         </div>
         </article>
 
-        <article class="thirdtUser">
+        <article class="thirdUser">
           <img
             class="avatar"
             src="https://picsum.photos/100/100"
