Add Header and assets

--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
 <body>
     <div class="mainPage">
         <div class="homeFlexContainer">
-            <nav>
+            <nav> 
+                <div id="logo">
+                    <img src="assets/Triangle-Game.png" alt="logo" />
+                </div>
+                <button onclick="themeSwitch()">☾ Dark Mode</button>
+                <!-- ☼ Light Mode -->
+                <!-- <ul>
+                    <li>☾</li>
+                    <li>☼</li>
+                </ul> -->
             </nav>
+            <div id="welcome">
+                <h1>Welcome to the Triangle Game!</h1>
+                <p>This game is especially made for developers. We want to test your knowledge and maybe you will compete with Zakari, Kahoot'master. Before starting, you must know that even the most highly trained don't succes. But you can try it. Are you ready to take up the challenge?</p>
+                <a href=".quizPage" class="primary-button">Yes, I am ready</a>
+            </div>
         </div>
     </div>
 
