--- a/index.html
+++ b/index.html
@@ -18,9 +18,26 @@
             </nav>
         </div>
     </div>
-
+    
     <div class="quizPage">
+        <!-- insert with JS H1 title and the question -->
         <div class="quizFlexContainer">
+            <ul class="questionTokens">
+                <li id="firstQuestion" class="activeToken">1</li>
+                <li id="secondQuestion" class="successToken">2</li>
+                <li id="thirdQuestion" class="wrongToken">3</li>
+                <li id="fourthQuestion">4</li>
+                <li id="fifthQuestion">5</li>
+                <li id="sixthQuestion">6</li>
+                <li id="seventhQuestion">7</li>
+                <li id="eighthQuestion">8</li>
+                <li id="ninthQuestion">9</li>
+                <li id="tenthQuestion">10</li>
+                <!-- insert the navbar with question :fixed ?-->
+                <!-- in the nav bar we should create the questions: always the same number of questions html/css-->
+            </ul>
+            <div class="quizz"></div>
+            <!-- insert all 4 answers in this div with a flex for mobile and grid for desktop? -->
 
         </div>
     </div>
