insert in section pageName a new div + etape 2 au script.js

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
                 <label for="username" >Enter your name </label> <br>
                 <input name="name" id="username" placeholder="Username"> <br>
             </form>
-            <h1>Chose your quizz theme </h1>
-            <div class="selectQuizz">
-                <button class="quizzTheme">Quizz 1</button>
-                <button class="quizzTheme">Quizz 2</button>
-                <button class="quizzTheme">Quizz 3</button>
+            <div>
+              <h1>Chose your quizz theme </h1>
+              <div class="selectQuizz">
+                  <button class="quizzTheme">Quizz 1</button>
+                  <button class="quizzTheme">Quizz 2</button>
+                  <button class="quizzTheme">Quizz 3</button>
+              </div>
             </div>
             <button class="neonButton" type="submit" onclick="slideUp('.quizPage')">Start Quizz</button>
         </div>
