added JS function select theme quizz

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 <input name="name" id="username" placeholder="Username"> <br>
             </form>
             <div>
-              <h1>Chose your quizz theme </h1>
+              <h1>Chose your quizz theme</h1>
               <div class="selectQuizz">
-                  <button class="quizzTheme">Quizz 1</button>
-                  <button class="quizzTheme">Quizz 2</button>
-                  <button class="quizzTheme">Quizz 3</button>
+                  <button class="quizzTheme firstQuizz">WildCodeSchool</button>
+                  <button class="quizzTheme secondQuizz">Javascript</button>
+                  <button class="quizzTheme thirdQuizz">WTF</button>
               </div>
             </div>
             <button class="neonButton" type="submit" onclick="slideUp('.quizPage')">Start Quizz</button>
