Updated quiz selector section with quiz updated function

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <div>
               <h1>Chose your quizz theme</h1>
               <div class="selectQuizz">
-                  <button class="quizzTheme firstQuizz" onclick="selectFirst()">WildCodeSchool</button>
-                  <button class="quizzTheme secondQuizz" onclick="selectSecond()">Javascript</button>
-                  <button class="quizzTheme thirdQuizz" onclick="selectThird()">WTF</button>
+                  <button class="quizzTheme firstQuizz">WildCodeSchool</button>
+                  <button class="quizzTheme secondQuizz">Javascript</button>
+                  <button class="quizzTheme thirdQuizz">WTF</button>
               </div>
             </div>
             <button class="neonButton" type="submit" onclick="quizDoubleAction()">Start Quizz</button>
