improved launch quiz button with disable state if no theme is selected

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <button class="quizzTheme thirdQuizz">WTF</button>
               </div>
             </div>
-            <button class="neonButton" type="submit" onclick="quizDoubleAction()">Start Quizz</button>
+            <button class="neonButton launchQuizz" type="submit" onclick="quizDoubleAction()">Start Quizz</button>
         </div>
     </div>
 
