add text quizz theme

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <div>
               <h1>Chose your quizz theme</h1>
               <div class="selectQuizz">
-                  <button class="quizzTheme firstQuizz"></button>
-                  <button class="quizzTheme secondQuizz"></button>
-                  <button class="quizzTheme thirdQuizz"></button>
+                  <button class="quizzTheme firstQuizz">WildCodeSchool</button>
+                  <button class="quizzTheme secondQuizz">JavaScript</button>
+                  <button class="quizzTheme thirdQuizz">WTF</button>
               </div>
             </div>
             <button class="neonButton" type="submit" onclick="quizDoubleAction()">Start Quizz</button>
