Logo switches according to viewport size

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="homeFlexContainer">
             <nav> 
                 <div id="logo">
-                    <img src="assets/logo-triangle-mini.png" alt="logo"/>
+                    <img src="assets/logo-triangle-mini.png" id="logoSmall" alt="logo"/>
+                    <img src="assets/logo-triangle.png" id="logoBig" alt="logo"/>
                 </div>
                 <button class="neonButton" onclick="themeSwitch()">☼ Light Mode</button>
                   <!-- ☾ Dark Mode -->
