--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
                   <button class="quizzTheme thirdQuizz">WTF</button>
               </div>
             </div>
-            <button class="neonButton launchQuizz" type="submit" onclick="generateQuizzAndSlide(0)">Start Quizz</button>
+            <button class="neonButton launchQuizz" type="submit" onclick="startGame()">Start Quizz</button>
         </div>
     </div>
 
     <div class="quizPage hid-box">
         <div class="quizFlexContainer">
             <ul class="questionTokens">
-                <li id="firstQuestion">1</li>
-                <li id="secondQuestion">2</li>
-                <li id="thirdQuestion">3</li>
-                <li id="fourthQuestion">4</li>
-                <li id="fifthQuestion">5</li>
-                <li id="sixthQuestion">6</li>
-                <li id="seventhQuestion">7</li>
-                <li id="eighthQuestion">8</li>
-                <li id="ninthQuestion">9</li>
-                <li id="tenthQuestion">10</li>
+                <li id="question1">1</li>
+                <li id="question2">2</li>
+                <li id="question3">3</li>
+                <li id="question4">4</li>
+                <li id="question5">5</li>
+                <li id="question6">6</li>
+                <li id="question7">7</li>
+                <li id="question8">8</li>
+                <li id="question9">9</li>
+                <li id="question10">10</li>
             </ul>
             <div class="testContainer">
               <div class="quizz"></div>
