--- a/index.html
+++ b/index.html
@@ -22,17 +22,12 @@
                 <div id="logo">
                     <img src="assets/logo-triangle-mini.png" alt="logo"/>
                 </div>
-                <button class="neonButton" onclick="themeSwitch()">☼ Light Mode</button>
-                  <!-- ☾ Dark Mode -->
-                 <!-- <ul>
-                     <li>☾</li>
-                     <li>☼</li>
-                 </ul> -->
+                <button class="neonButton switch" onclick="themeSwitch()">☼ Light Mode</button>
             </nav>
             <div id="welcome">
-                <h1>Welcome to the Triangle Game!</h1>
-                <p>This game is especially made for developers. We want to test your knowledge and maybe you will compete with Zakari, Kahoot'master. Before starting, you must know that even the most highly trained don't succes. But you can try it. Are you ready to take up the challenge?</p>
-                <button class="neonButton" id="btnGlow" onclick="slideUp('.namePage')"> <span class="text">Ready, Player One ?</span>
+                <h1 class="text">Welcome to the Triangle Game!</h1>
+                <p class="text">This game is especially made for developers. We want to test your knowledge and maybe you will compete with Zakari, Kahoot'master. Before starting, you must know that even the most highly trained don't succes. But you can try it. Are you ready to take up the challenge?</p>
+                <button class="neonButton" id="btnGlow" onclick="slideUp('.namePage')"> <span>Ready, Player One ?</span>
                 </button>
                 <!-- <a href="#namePage" class="primary-button">Yes, I am ready</a> -->
                 <!-- <button></button> -->
@@ -40,10 +35,10 @@
         </div>
     </div>
 
-      <div class="namePage hid-box" id="namePage">
+    <div class="namePage hid-box lightMode" id="namePage">
         <div class="nameFlexContainer">
             <form action="/script.js" method="post">
-                <label for="username" >Enter your name </label> <br>
+                <label for="username">Enter your name </label> <br>
                 <input name="name" id="username" placeholder="Username"> <br>
             </form>
             <div>
@@ -58,7 +53,7 @@
         </div>
     </div>
 
-    <div class="quizPage hid-box">
+    <div class="quizPage hid-box lightMode">
         <!-- insert with JS H1 title and the question -->
         <div class="quizFlexContainer">
             <ul class="questionTokens">
