--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="namePage hid-box" id="namePage">
 
           <div class="nameFlexContainer">
-            <form name="myForm" action="/script.js" method="post">
+            <form name="myForm" id="testABC" action="/script.js" method="post">
                 <label for="username" >Enter your name </label> <br>
                 <input name="name" id="username" placeholder="Username"> <br>
             </form>
@@ -83,53 +83,36 @@
 
     <div class="resultsPage hid-box">
       <h1>You finished the Quizz !</h1>
-      <p>Congrats userName, you scored userScore.</p>
-      <p>You ranked userRank.</p>
+      <p id="congrats">Congrats userName, you scored userScore.</p>
+      <p id = "rank">You ranked userRank.</p>
       <div class="resultsFlexContainer">
         
-        
         <article class="firstUser">
-          <img
-            class="avatar"
-            src="https://picsum.photos/100/100"
-            alt="avatar de firstUser"
-          />
+          <img class="avatar" src="./assets/goldenMedal.png" alt="Golden Medal">
         <div>
-          <p>firstUserName</p>
-          <p>firstUserScore</p>
+          <p id="firstUserName"></p>
+          <p id="firstUserScore"></p>
         </div>
         </article>
 
         <article class="secondUser">
-          <img
-            class="avatar"
-            src="https://picsum.photos/100/100"
-            alt="avatar de secondUser"
-          />
+          <img class="avatar" src="./assets/silverMedal.png" alt="Silver Medal">
           <div>
-          <p>secondUserName</p>
-          <p>secondUserScore</p>
+          <p id="secondUserName"></p>
+          <p id="secondUserScore"></p>
         </div>
         </article>
 
         <article class="thirdUser">
-          <img
-            class="avatar"
-            src="https://picsum.photos/100/100"
-            alt="avatar de thirdUser"
-          />
-
+          <img class="avatar" src="./assets/bronzeMedal.png" alt="Bronze Medal">
         <div>
-          <p>thirdUserName</p>
-          <p>thirdUserScore</p>
+          <p id="thirdUserName"></p>
+          <p id="thirdUserScore"></p>
         </div>
         </article>
       </div>
-      <button class="neonButton" type="submit" onClick="window.location.reload()">Try another quiz !</button>
-      <!-- <a href="#namePage" 
-      type="button"
-      class="neonButton">
-      "Try another quiz !"</a> -->
+      <button class="neonButton" id="quizzReturn" type="submit" onClick="window.location.reload()">Try another quiz !</button>
+      <!-- <a href="#namePage" type="button" class="neonButton"> "Try another quiz !"</a> -->
       <footer id="footer">
         <p>© 2022 Team Triangle</p>
       </footer> 
