Removed unused assets and cleaned up the files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,7 +26,7 @@
             </nav>
             <div id="welcome">
                 <h1 class="text">Welcome to the Triangle Game!</h1>
-                <p class="text">This game is especially made for developers. We want to test your knowledge and maybe you will compete with Zakari, Kahoot'master. Before starting, you must know that even the most highly trained don't succes. But you can try it. Are you ready to take up the challenge?</p>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pharetra sapien eget nulla tempus, id pharetra est faucibus. In nec commodo risus. Donec leo ex, suscipit sit amet erat semper, gravida blandit turpis. Phasellus ultricies placerat tempor. Fusce est diam, tempus nec ipsum vestibulum, iaculis iaculis nisl. Curabitur convallis nisi consequat mauris consectetur eleifend. Pellentesque tortor nulla, sollicitudin et risus quis, volutpat tristique turpis.</p>
                 <button class="neonButton" id="btnGlow" onclick="slideUp('.namePage')"> <span>Ready, Player One ?</span>
                 </button>
             </div>
@@ -36,7 +35,7 @@
       <div class="namePage hid-box" id="namePage">
 
           <div class="nameFlexContainer">
-            <form name="myForm" id="testABC" action="/script.js" method="post">
+            <form name="myForm" id="userForm" action="/script.js" method="post">
                 <label for="username" >Enter your name </label> <br>
                 <input name="name" id="username" placeholder="Username"> <br>
             </form>
@@ -109,9 +108,6 @@
         <p>© 2022 Team Triangle</p>
       </footer> 
     </div>
-
-    
-
     <script src="script.js"></script>
   </body>
 </html>
