Text introduction, font-size mainPAge

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
             <div id="welcome">
                 <h1 class="text">Welcome to the Triangle Game!</h1>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris pharetra sapien eget nulla tempus, id pharetra est faucibus. In nec commodo risus. Donec leo ex, suscipit sit amet erat semper, gravida blandit turpis. Phasellus ultricies placerat tempor. Fusce est diam, tempus nec ipsum vestibulum, iaculis iaculis nisl. Curabitur convallis nisi consequat mauris consectetur eleifend. Pellentesque tortor nulla, sollicitudin et risus quis, volutpat tristique turpis.</p>
+                <p class="text">This game is especially made for Wild Code School's developers. We want to test your knowledge about Wild and Javascript. Or if you want to take a break and know better our team triangle, you can try the WTF quizz.</p>
                 <button class="neonButton" id="btnGlow" onclick="slideUp('.namePage')"> <span>Ready, Player One ?</span>
                 </button>
             </div>
@@ -36,11 +36,11 @@
 
           <div class="nameFlexContainer">
             <form name="myForm" id="userForm" action="/script.js" method="post">
-                <label for="username" >Enter your name </label> <br>
+                <label for="username" class="text">Enter your name </label> <br>
                 <input name="name" id="username" placeholder="Username"> <br>
             </form>
             <div>
-              <h1>Chose your quizz theme</h1>
+              <h1 class="text">Chose your quizz theme</h1>
               <div class="selectQuizz">
                   <button class="quizzTheme firstQuizz">WildCodeSchool</button>
                   <button class="quizzTheme secondQuizz">Javascript</button>
@@ -73,9 +73,9 @@
     </div>
 
     <div class="resultsPage hid-box">
-      <h1>You finished the Quizz !</h1>
-      <p id="congrats">Congrats userName, you scored userScore.</p>
-      <p id = "rank">You ranked userRank.</p>
+      <h1 class="text">You finished the Quizz !</h1>
+      <p id="congrats" class="text">Congrats userName, you scored userScore.</p>
+      <p id = "rank" class="text">You ranked userRank.</p>
       <div class="resultsFlexContainer">
         
         <article class="firstUser">
