Final CSS edits with the triangle team

--- a/index.html
+++ b/index.html
@@ -78,29 +78,29 @@
       <p id = "rank" class="text">You ranked userRank.</p>
       <div class="resultsFlexContainer">
         
-        <article class="firstUser">
+        <div class="podium firstUser">
           <img class="avatar" src="./assets/goldenMedal.png" alt="Golden Medal">
         <div>
           <p id="firstUserName"></p>
           <p id="firstUserScore"></p>
         </div>
-        </article>
+      </div>
 
-        <article class="secondUser">
+        <div class="podium secondUser">
           <img class="avatar" src="./assets/silverMedal.png" alt="Silver Medal">
           <div>
           <p id="secondUserName"></p>
           <p id="secondUserScore"></p>
         </div>
-        </article>
+      </div>
 
-        <article class="thirdUser">
+        <div class="podium thirdUser">
           <img class="avatar" src="./assets/bronzeMedal.png" alt="Bronze Medal">
         <div>
           <p id="thirdUserName"></p>
           <p id="thirdUserScore"></p>
         </div>
-        </article>
+      </div>
       </div>
       <button class="neonButton" id="quizzReturn" type="submit" onClick="window.location.reload()">Try another quiz !</button>
       <!-- <a href="#namePage" type="button" class="neonButton"> "Try another quiz !"</a> -->
